# AIceberg

./: README.md  fitbertopic.py  pyproject.toml  requirements.txt  shuffleddataframe.csv
Data/: hardrules.csv  valerie_holtz_dataset.csv
Evaluation/: ROC_evaluation_classifier.py
HateSpeech-Erkennung/: 20230123162746_trained_model.pkl  Is_Hatespeech.py  test_germandata.py
HateSpeech-Erkennung/Data/: hardrules.csv
